<resources>
    <string name="app_name_info_screen">OSM Dashboard\nfor OpenTracks</string>
    <string name="copyright_osm">Map data © OpenStreetMap contributors</string>
    <string name="default_theme">Default theme</string>
    <string name="map_info_menu">About</string>
    <string name="map_folder">Map directory</string>
    <string name="theme_folder">Map theme directory</string>
    <string name="usage_info">Use <b><a href="https://f-droid.org/packages/de.dennisguse.opentracks">OpenTracks</a></b>, select a track and click the map icon to show the track on the map.</string>
    <string name="osm_info">The default map is provided by <b><a href="https://openstreetmap.org">OpenStreetMap.org</a></b>. Join the community and help to improve the map, see <b><a href="https://www.openstreetmap.org/fixthemap">www.openstreetmap.org/fixthemap</a></b>.</string>
    <string name="consider_offline_maps">Please consider downloading an offline map to decrease the server load and save your mobile data plan. Some offline maps can be found here:</string>
    <string name="map_theme_info"><b>Some maps require special themes to render correctly!</b> These need to be downloaded and configured accordingly.</string>
    <string name="offline_map_info">Offline maps can be downloaded from within the app. Go to the settings and choose <b>Map download</b> or by visiting the above mentioned websites and click the download links. Some browsers (e.g. Firefox) require a long click on the link and "Open link in external app" and then choose OSMDashboard.</string>
    <string name="manual_offline_map_info">Manual downloaded offline maps or maps shared with other apps can be opened from your Android device. Select the directory in the settings <b>Map directory</b>.</string>
    <string name="app_logo_description">App logo</string>
    <string name="online_map_consent">There is no offline map configured. Please agree to use the online map from openstreetmap.org. This might leak your current location. See https://operations.osmfoundation.org/policies/tiles/ for tile usage and privacy policy.</string>
    <string name="online_map_consent_info">Usage of the online map from openstreetmap.org might leak your current location. You need to give consent before usage.</string>
    <string name="map_online_consent_menu">Online map consent</string>
    <string name="download_map">Map download</string>
    <string name="download_theme">Theme download</string>
    <string name="choose_map_to_download">Choose a map to download</string>
    <string name="download_instruction">You are viewing content of https://ftp-stud.hs-esslingen.de.</string>
    <string name="download_success">Map successfully downloaded</string>
    <string name="download_failed">Map download failed</string>
    <string name="download_theme_success">Theme successfully downloaded</string>
    <string name="download_theme_failed">Theme download failed</string>
    <string name="map_selection">Maps</string>
    <string name="online_osm_mapnick">Online map OSM:Mapnik</string>
    <string name="delete_map_question">Delete map \"%s\"?</string>
    <string name="delete_map_error">Map deletion failed</string>
    <string name="theme_selection">Map themes</string>
    <string name="delete_theme_question">Delete theme \"%s\"?</string>
    <string name="delete_theme_error">Theme deletion failed</string>
    <string name="overwrite_map_question">The map \"%s\" already exists! Delete and download again?</string>
    <string name="overwrite_theme_question">The theme \"%s\" already exists! Delete and download again?</string>
    <string name="cancel_download_question">Cancel current download?</string>
    <string name="error_loading_offline_map">Error reading configured offline map</string>
    <string name="track_smoothing_menu">Track smoothing</string>
    <string name="track_smoothing_info">Define the tolerance in meters for the track smoothing algorithm. Set to 0 to disable track smoothing.</string>
    <string name="pip_mode">Picture in picture mode</string>
    <string name="map_mode">Map orientation</string>
    <string name="map_mode_north_top">Map north on top</string>
    <string name="map_mode_direction">Map moving direction</string>
    <string name="menu_advanced">Advanced</string>
    <string name="no_map_configured">You have no offline map configured yet.</string>
    <string name="stroke_width_info">Define the stroke width of the tracks</string>
    <string name="stroke_width_menu">Track stroke width</string>
    <string name="no_download_uri_found">No URI to download found</string>
    <string name="startDownload">Start Download</string>
    <string name="no_file_manager_found">No file manager found</string>
    <string name="error_reg_content_observer">Error on registering OpenTracksContentObserver</string>

    <string name="unit_feet">ft</string>
    <string name="unit_kilometer">km</string>
    <string name="unit_kilometer_per_hour">km/h</string>
    <string name="unit_meter">m</string>
    <string name="unit_mile">mi</string>
    <string name="unit_mile_per_hour">mph</string>
    <string name="unit_minute_per_kilometer">min/km</string>
    <string name="unit_minute_per_mile">min/mi</string>

    <string name="share">Share</string>
    <string name="toggle_full_screen_mode">Toggle fullscreen mode</string>

    <string name="error_crash_title">%1$s crashed</string>
    <string name="bug_report">Report bug</string>
    <string name="configure_statistic">Configure statistic</string>
    <string name="category">Category</string>
    <string name="total_time">Total time</string>
    <string name="moving_time">Moving time</string>
    <string name="distance_km">Distance in km</string>
    <string name="elevation_meter">Elevation gain in meter</string>
    <string name="speed_km_h">Speed in km/h</string>
    <string name="pace_min_km">Pace in min/km</string>
    <string name="speed_mi_h">Speed in mi/h</string>
    <string name="pace_min_mi">Pace in min/mi</string>
    <string name="elevation_feet">Elevation gain in feet</string>
    <string name="distance_mi">Distance in miles</string>
    <string name="version_info"><![CDATA[<b>Version:</b> %s - %s (%d)]]></string>
    <string name="error_reading_trackpoints">Error reading trackpoints: %s</string>
    <string name="debug_trackpoints">Debug trackpoints</string>
    <string name="debug_trackpoints_info">Trackpoints received: %1$d
\nTrackpoints invalid: %2$d
\nTrackpoints drawn: %3$d
\nTrackpoints pause: %4$d
\nSegments: %5$d
\nProtocol version: %6$d</string>
    <string name="track_color">Track color</string>
    <string name="track_color_mode_uni">Unicolor</string>
    <string name="track_color_mode_by_track">Color by track</string>
    <string name="track_color_mode_by_speed">Color by speed</string>
    <string name="show_pause_markers">Show pause markers</string>
    <string name="general_settings_category_title">General</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="map_settings">Map</string>
    <string name="settings_night_mode_title">UI Theme</string>
    <string name="settings_night_mode_option_system">System</string>
    <string name="settings_night_mode_option_day">Day</string>
    <string name="settings_night_mode_option_night">Night</string>
    <string name="settings_ui_dynamic_colors_title">Dynamic Colors</string>
    <string name="settings_ui_dynamic_colors_summary">Use user-defined Dynamic Colors (Android 12+ only; requires a manual restart)</string>
    <string name="distance_vs_time_distribution" />
    <string name="duration_vs_time_distribution" />
    <string name="runs_vs_time_distribution">runs_vs_time_distribution</string>
    <string name="Duration_vs_Time_distribution">duration_vs_time_distribution</string>
    <string name="Distance_vs_Time_distribution">distance_vs_time_distribution</string>
    <string name="filter">filter</string>
    <string name="bar_graph_1">bar graph 1</string>
    <string name="bar_graph_2">bar graph 2</string>
    <string name="bar_graph_3">bar graph 3</string>
    <string name="line_chart">line chart</string>
    <string name="distancegraph">distancegraph</string>
    <string name="durationgraph">durationgraph</string>
    <string name="runsgraph">runsgraph</string>
    <string name="average_elevation_vs_speed_range">Average Elevation vs Speed Range</string>
    <string name="Distance_Graph">Distance Graph</string>
    <string name="Duration_Graph">Duration Graph</string>
    <string name="Runs_Graph">Runs Graph</string>
    <string name="frequency_vs_speed_range">Frequency vs Speed Range</string>
    <string name="frequency_vs_time_distribution">Frequency vs Time Distribution</string>

</resources>
